--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@
 *~
 
 #specific to PyAChemKit
+
 #final doc version
 AChemKit.pdf
+
 #documentation build directorys
-doc/html/
 doc/latex/
+#doc/html/ #dont ignore this so it can be put on the git website in branch gh-pages
+
 #auto-generated documentation
 doc/autodoc/
+
 #sphinx internal caching
 doc/doctrees/
